# PyTmcStepper

./: .gitignore  .markdownlint.json  CHANGELOG.md  README.md  data.json  pyproject.toml  setup.cfg  upload_to_pico.py
demo/: debug_script_01_uart_connection.py  demo_script_01_uart_connection.py  demo_script_01_uart_scan.py  demo_script_02_pin_connection.py  demo_script_03_basic_movement.py  demo_script_04_stallguard.py  demo_script_05_vactual.py  demo_script_06_multiple_drivers.py  demo_script_07_threads.py  demo_script_08_log_to_file.py  demo_script_09_uartless.py  demo_script_10_only_step_pin.py  demo_script_11_continous_movement.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1bed09767f6f1a1b___init___py.html  z_1bed09767f6f1a1b__tmc_ec_pin_py.html  z_1bed09767f6f1a1b__tmc_ec_py.html  z_1bed09767f6f1a1b__tmc_ec_toff_py.html  z_2092655fe10236bb__tmc2209_reg_py.html  z_2092655fe10236bb__tmc220x_reg_py.html  z_2092655fe10236bb__tmc224x_reg_py.html  z_2092655fe10236bb__tmc5160_reg_py.html  z_2092655fe10236bb__tmc_reg_py.html  z_2092655fe10236bb__tmc_shared_regs_py.html  z_31b6b07b49f6e852___init___py.html  z_31b6b07b49f6e852__tmc_exceptions_py.html  z_31b6b07b49f6e852__tmc_math_py.html  z_31b6b07b49f6e852__tmc_stallguard_py.html  z_31b6b07b49f6e852__tmc_stepperdriver_py.html  z_31b6b07b49f6e852__tmc_validation_py.html  z_31b6b07b49f6e852__tmc_xxxx_py.html  z_31b6b07b49f6e852_platform_utils_py.html  z_31b6b07b49f6e852_tmc_2208_py.html  z_31b6b07b49f6e852_tmc_2209_py.html  z_31b6b07b49f6e852_tmc_220x_py.html  (+32 more)
tests/: test_tmc2209.py  (+5 more)
(+98 files in other folders)
