[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pylint."messages control"]
disable = "C0103,W0511,W0012,R0801"

[tool.pylint.main]
ignored-modules = "machine"
unsafe-load-any-extension = true

[tool.pylint.format]
max-line-length = 160